# Precept

./: .clang-format  CMakeLists.txt  README.md
cmake/: PreceptConfig.cmake.in
ctest/tests/: Array.cpp  Serializer.cpp  linalg.cpp  math.cpp
include/pre/: Array  Dual  Half  Quaternion  math  memory  meta  random  terminal
include/pre-graphics/: AdjacencyLists  AnimationCurve  Astar  BSplineBasis  Bezier  Bound  Color  Converger  Delaunator  DynamicBbTree  DynamicKdTree  EdgeList  Fresnel  GrowableHeap  GrowableStack  Image  ImageSampler  ImmutableBbTree  ImmutableKdTree  Line  Microsurface  MonteCarlo  Noise  PoolVector  Prospect  Quadrature  Quadric  Ray  RungeKutta  SunSky  Triangle  UserData  WavefrontObj  Wrap
include/pre/_hidden/_Array/: Index.inl  Lazy.inl  Nd.inl  View.inl  math.inl
include/pre/_hidden/_Array/_math/: Linalg.inl  cmath_extras.inl.rb  color.inl  geometric.inl
include/pre/_hidden/_math/: cmath_extras.inl  color.inl  interpolation.inl  numeric_constants.inl
include/pre/_hidden/_meta/: IteratorRange.inl  concepts.inl
include/pre/hidden/Array/: Index.inl  Lazy.inl  Lazy_operators.inl  View.inl  math.inl
include/pre/hidden/Array/math/: Lazy_geometric.inl  Linalg.inl  cmath_extras.inl  geometric.inl
include/pre/hidden/math/: cmath_extras.inl  interpolation.inl  numeric_constants.inl
include/pre/hidden/meta/: IteratorRange.inl  concepts.inl  size.inl
src/: AdjacencyLists.cpp  AnimationCurve.cpp  Color.cpp  Delaunator.cpp  DynamicBbTree.cpp  DynamicKdTree.cpp  GrowPoolVector.h  Image.cpp  ImmutableBbTree.cpp  ImmutableKdTree.cpp  Microsurface.cpp  Quadrature.cpp  QuadratureTabulated.h  SunSky.cpp  WavefrontObj.cpp  stb_image.h  stb_image_write.h
